# audible-deals

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deals.spec  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/audible_deals/: __init__.py  __main__.py  cli.py  client.py  constants.py  display.py  filtering.py  serialization.py  settings.py  state.py  utils.py
src/audible_deals/web/: __init__.py
src/audible_deals/web/routes/: __init__.py  auth.py  categories.py  compare.py  config.py  history.py  library.py  profiles.py  search.py  watch.py  wishlist.py
src/audible_deals/web/static/: app.js  style.css
src/audible_deals/web/templates/: base.html  categories.html  compare.html  config.html  detail.html  history.html  index.html  library.html  profiles.html  recap.html  search.html  watch.html  wishlist.html
src/audible_deals/web/templates/auth/: import.html  login.html
src/audible_deals/web/templates/partials/: _categories_list.html  _config_list.html  _library_table.html  _notify_result.html  _product_table.html  _profile_list.html  _progress.html  _summary.html  _watch_table.html  _wishlist_table.html
tests/: conftest.py  test_all_routes.py  test_cli.py  test_client.py  test_display.py  test_filtering.py  test_integration.py  test_state.py
