[project]
name = "audible-deals"
version = "0.3.0"
description = "CLI to find and sort Audible audiobook deals by price and genre"
requires-python = ">=3.11"
dependencies = [
    "audible>=0.8.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audible_deals"]

[project.scripts]
deals = "audible_deals.cli:cli"
